<resources>
    <!-- Set a app name -->
    <string name="app_name">Calculator</string>

    <!-- Create hint for user to type in edit box-->
    <string name="op1_hint">Enter Operand 1 in Decimal(ex. 1.0)</string>
    <string name="op2_hint">Enter Operand 2 in Decimal(ex. 1.0)</string>

    <!-- Create a lable for result of operation-->
    <string name="result_label_text">Result:</string>
    <string name="calculated_value"> </string>

    <!-- Create a lable for arithmetic operation-->
    <string name="plus"> + </string>
    <string name="minus"> - </string>
    <string name="mult"> x </string>
    <string name="div"> / </string>
    <string name="ptr"> % </string>

    <!-- Create a lable for square root using unicode -->
    <string name="sqtr">\u221A</string>
</resources>
